Fault-tolerant SSE processing in TS, with visual feedback.

--- a/public/index.html
+++ b/public/index.html
@@ -12,8 +12,13 @@
 </head>
 
 <body>
-  <h1>Conteneurs</h1>
-  <div id="graph"></div>
+  <div>
+    <div style="float: right; padding: 1em 2em">
+      <i id="status" class="fa-regular"></i>
+    </div>
+    <h1>Conteneurs</h1>
+  </div>
+  <div id="graph" style="clear:both"></div>
   <script type="module" src="js/index.js"></script>
 </body>
 
